--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -21,6 +21,7 @@ jobs:
       env:
         IBM_ACCOUNT: ${{ secrets.IBM_ACCOUNT }}
         REGION_NUM: ${{ secrets.REGION_NUM }}
+        IBM_APIKEY: ${{ secrets.IBM_APIKEY }}
       run: |
         ./IBM_Cloud_CLI/ibmcloud login --apikey "$IBM_APIKEY"
     - name: Target IBM Cloud
