--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -23,7 +23,7 @@ jobs:
         REGION_NUM: ${{ secrets.REGION_NUM }}
         IBM_APIKEY: ${{ secrets.IBM_APIKEY }}
       run: |
-        ./IBM_Cloud_CLI/ibmcloud login --apikey "$IBM_APIKEY"
+        ./IBM_Cloud_CLI/ibmcloud login --apikey "$IBM_APIKEY" -r us-south
     - name: Target IBM Cloud
       env:
         RESOURSE_ID: ${{ secrets.RESOURSE_ID }}
